wdd-130/wwr/styles/styles.css
#content {
  max-width: 1600px;
  margin: 0 auto;
}
#logo_link {
  padding-top: 5px;
  justify-self: center;
  align-self: center;
}
.logo{align-self: center;}
.home-title {
  font-size: 2em;
  margin-top: 10px;
}
nav {
  display: flex;
  justify-content: space-around;align-items: center;
  
}
nav a {
  text-align: center;
  color:whitesmoke;padding: 35px;display: flex;
  justify-content: space-around;
}
#hero-msg {
  grid-column: 2/3;
  grid-row: 1/2;
  margin-top: 100px;}

#hero-img {
  align-items: center;
}
#hero-msg h1{ text-align: center;}
#hero-msg h4 {
  text-align: center; color:white; grid-column: 1/4;grid-row:1/2;
}
.button-box {
  text-align: center;
}
main section {
  text-align: center;
}
#background {
  height: 725px;
  background-color: #28666e; grid-column: 1/11; grid-row: 4/9;
}
h2 {
  margin: 0;
}
body {
  background-color: #28666e;
  font-family: "Courier New", Courier, monospace;
  margin: 0;
  padding: 0;
}
header {
  background-color: #28666e;display: grid;
  grid-template-columns: 150px auto; justify-self: center;align-self: center
}
nav a:hover {
  background-color: #7c9885;
  color: #b5b682;
  text-align: center;
  text-decoration: none;
  padding: 35px; justify-content: space-around;
}
.book {
  background-color: #28666e;
  color: #b5b682;
  text-align: center;
  text-decoration: none;
  font-size: 18px;
  padding: 15px 30px;
  margin-top: 50px;border-radius: 5px;
}
.join {
  background-color: #28666e;
  color: #b5b682;
  text-align: center;
  text-decoration: none;
  padding: 15px 30px;
  margin-top: 50px;border-radius: 5px;
}
.book:hover {
  background-color: #7c9885;
}
.join:hover {
  background-color: #7c9885;
}
.msg p {
  color: black;
  font-size: 0.8em;
  padding-bottom: 15px;
}
.msg h2 {
  color: #b5b682;
}
.msg {
  background-color: whitesmoke;
  padding: 35px; grid-column: 6/10; grid-row: 6/7;
}
.rivers-card {
  margin: 200px 0; grid-column: 2/4; grid-row: 2/3;
}
.info_card{
  margin: 200px 0; grid-column: 1/3; grid-row: 2/3;background-color: whitesmoke;border-style: solid;align-content: center;}
.camping-card {
  margin: 200px 0; grid-column: 5/7;grid-row: 2/3;
}
.rapids-card {
  margin: 200px 0;grid-column: 8/10; grid-row: 2/2;
}


.front_img{
  margin: 200px 0;grid-column: 4/9; grid-row: 2/3;}
.card-img{border: solid black 10px;}

main section img{ box-sizing: border-box;}
footer a {
  color: #b5b682;
  text-align: center;
  text-decoration: none;
}
footer p a:hover {
  color: #7c9885;
  text-decoration: underline;
}
footer a:hover {
  color: #7c9885;
}
footer p {
  font-size: 1.2em;
}
footer {
  display: flex;
  background-color: #28666e;
  color: #b5b682;
  padding: 25px 50px;
  margin-top: 200px;justify-content: space-around;
  align-items: center;
}
.icon {
  width: 80px;
  padding-top: 10px;
}
footer .social img {
  padding-top: 15px;
}
#hero {
  display: grid;
  grid-template-columns: 1fr 3fr 1fr;
  margin-top: -100px; 
}
#hero-box {
  grid-column: 1/4;
  grid-row: 1/3; z-index: -1;align-self: center;
}
.home-grid{
  display:grid;grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr ;
}

.card-img, .mountains {
  width: 100%;
}
.mountains{ grid-column: 2/7; grid-row: 5/8; }
.card-img {
  border: 10px solid #d9c2a3;
  transition: transform .5s;
  box-shadow: 5px 5px 10px #6f7364; ;
}
.card-img:hover {
  opacity: .6;
  transform: scale(1.1);
}

.section_title{grid-column: 2/10;text-align: center; grid-row:3/3;color: whitesmoke;}
.testimony2{
  margin: 200px 0; grid-column: 2/4; grid-row: 3/3;background-color: whitesmoke;text-align: center;border-style: solid;align-content: center}
.testimony3 {
  margin: 200px 0; grid-column: 5/7;grid-row: 3/3;background-color: whitesmoke;text-align: center;border-style: solid;align-content: center
}
.testimony4{
  margin: 200px 0;grid-column: 8/10; grid-row: 3/3;background-color: whitesmoke;text-align: center;border-style: solid;align-content: center;
}


@media screen and (max-width: 900px) {
  #hero, .home-grid {
      display: block;
      height: auto;
  }
  nav, footer {
      flex-direction: column;
  }
  nav a {
      display: block;
      padding: 15px;
  }
  #hero {
      margin-top: 0;
  }
  #hero-msg {
      margin-top: 0;
  }
  #hero-msg h4 {
      display: none;
  }
  .home-title {
      font-size: 25px;
      color: #6f7364;
  }
  .rivers-card, .camping-card, .rapids-card { 
      margin: 50px auto;
      width: 60%;
  }
  #background {
      display: none;
  }
  .mountains, .msg {
      width: 80%;
      display: block;
      margin: 0 auto;
  }
  footer {
      margin-top: 25px;
  }
}
          

